Renames my-app and my-icons. Fixes issue 15.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="import" href="bower_components/platinum-sw/platinum-sw-elements.html">
 
     <!-- Load your application shell -->
-    <link rel="import" href="src/my-app.html">
+    <link rel="import" href="src/rpg-app.html">
 
     <!-- Add any global styles for body, document, etc. -->
     <style>
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                            path="/uc(.*)"
                            handler="cacheFirst"></platinum-sw-fetch>
     </platinum-sw-register>
-    <my-app></my-app>
+    <rpg-app></rpg-app>
     <noscript>
       Please enable JavaScript to view this website.
     </noscript>
