--- a/src/rpg-app.html
+++ b/src/rpg-app.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
@@ -25,7 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymerfire/firebase-auth.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-document.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-query.html">
-<link rel="import" href="my-icons.html">
+<link rel="import" href="rpg-icons.html">
 
 <link rel="lazy-import" href="rpg-characters.html">
 <link rel="lazy-import" href="rpg-character.html">
@@ -33,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="rpg-scene.html">
 <link rel="lazy-import" href="rpg-view404.html">
 
-<dom-module id="my-app">
+<dom-module id="rpg-app">
   <template>
     <style>
       :host {
@@ -133,9 +123,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    class MyApp extends Polymer.Element {
+    class RPGApp extends Polymer.Element {
 
-      static get is() { return 'my-app'; }
+      static get is() { return 'rpg-app'; }
 
       static get properties() {
         return {
@@ -217,6 +207,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     }
 
-    window.customElements.define(MyApp.is, MyApp);
+    window.customElements.define(RPGApp.is, RPGApp);
   </script>
 </dom-module>
