--- a/src/rpg-app.html
+++ b/src/rpg-app.html
@@ -46,6 +46,10 @@
         --paper-icon-button-ink-color: white;
       }
 
+      app-toolbar {
+        text-transform: capitalize;
+      }
+
       .drawer-list {
         margin: 0 20px;
       }
@@ -98,13 +102,14 @@
         <app-header slot="header" condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-            <template is="dom-if" if="{{signedIn}}">
-              <div main-title>Signed is as [[user.email]]</div>
-              <paper-button raised on-click="signOut">Sign Out</paper-button>
-            </template>
-            <template is="dom-if" if="{{!signedIn}}">
-              <paper-button raised on-click="signIn">Sign In</paper-button>
-            </template>
+            
+            <div main-title>[[page]]</div>
+          <template is="dom-if" if="[[signedIn]]">
+          <paper-button raised on-click="signOut">Sign Out</paper-button>
+        </template>
+        <template is="dom-if" if="[[!signedIn]]">
+          <paper-button raised on-click="signIn">Sign In</paper-button>
+        </template>
           </app-toolbar>
         </app-header>
 
