--- a/src/rpg-app.html
+++ b/src/rpg-app.html
@@ -18,7 +18,7 @@
 <link rel="import" href="rpg-icons.html">
 
 <link rel="lazy-import" href="rpg-characters.html">
-<link rel="lazy-import" href="rpg-character.html">
+<link rel="lazy-import" href="rpg-character-sheet.html">
 <link rel="lazy-import" href="rpg-scenes.html">
 <link rel="lazy-import" href="rpg-scene.html">
 <link rel="lazy-import" href="rpg-view404.html">
