Change to red theme. Closes #12.

--- a/src/rpg-app.html
+++ b/src/rpg-app.html
@@ -27,7 +27,7 @@
   <template>
     <style>
       :host {
-        --app-primary-color: #4285f4;
+        --app-primary-color: #d20a11;
         --app-secondary-color: black;
 
         display: block;
@@ -93,7 +93,7 @@
     <app-drawer-layout fullbleed>
       <!-- Drawer content -->
       <app-drawer id="drawer" slot="drawer">
-        <app-toolbar>The&nbsp;<span style="font-weight: bold; color: red;">R</span> ipage</app-toolbar>
+        <app-toolbar>The&nbsp;<span style="font-weight: bold; color: #d20a11;">R</span> ipage</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="characters" href="characters">Characters</a>
           <!-- <a name="scenes" href="scenes">Scenes</a> TODO: Phase II -->
