--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     
     <!-- Load your application shell -->
-    <link rel="import" href="src/rpg-app.html">
+    <link rel="import" href="src/rpg-app.html?v=1.0">
 
     <!-- Add any global styles for body, document, etc. -->
     <style>
