Fix the border on The Ripage link.

--- a/src/rpg-app.html
+++ b/src/rpg-app.html
@@ -59,6 +59,7 @@
       app-toolbar a:hover, a:visited, a:link, a:active {
         color:inherit;
         text-decoration: none;
+        outline: 0;
       }
 
       .drawer-list {
